# OhSINT

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.claude/: launch.json  settings.local.json
configs/: api_keys.yaml.example  scan_profiles.yaml
docker/: Dockerfile  docker-compose.yml
docs/: mcp-setup.md  security.md  tools.md
src/: cli.py  config.py  models.py  orchestrator.py  registry.py  report.py  target.py
src/mcp/: server.py
src/tools/: __init__.py  base.py  beenverified.py  brave_search.py  censys.py  clear_tool.py  consumer_identity_reference.py  creepy.py  crosslinked.py  crtsh.py  datasploit.py  dork_cli.py  exiftool.py  github_dorks.py  goodork.py  h8mail.py  holehe_tool.py  hudson_rock.py  idi.py  inspy.py  intelx.py  lexisnexis.py  linkedin2username.py  linkedint.py  maigret_tool.py  metagoofil.py  numverify.py  recon_ng.py  sherlock_tool.py  shodan_tool.py  smartmove.py  snitch.py  spiderfoot.py  spycloud.py  subfinder.py  theharvester.py  tlo.py  tracers.py  twilio_lookup.py  vcsmap.py  (+5 more)
tasks/: lessons.md  todo.md
tests/: test_config.py  test_mcp_server.py  test_parsers.py  test_target.py  test_validation.py
